# Haskell-Orchestrator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  RELEASE.md  RELEASE_ASSERTIONS.md  SECURITY.md  THREAT_MODEL.md  WORKSPACE.md  cabal.project  orchestrator.cabal
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-standalone.yml  ci-haskell.yml  ci.yml  release-haskell.yml  release.yml  repo-guard.yml  security-haskell.yml  security.yml  standalone.yml
_release/: SHA256SUMS-3.0.0.txt
_release/haskell-orchestrator-3.0.0-linux-x86_64/: LICENSE  README.md
app/: CLI.hs  Main.hs
config/: capability-contract.yaml
demo/.github/workflows/: ci.yml  deploy.yml  release.yml
docs/: capability-contract.md  capability-matrix.md  edition-comparison.md  faq.md  operator-guide.md  output-examples.md  quickstart.md  remediation-philosophy.md  safety-model.md  why-haskell-orchestrator.md
examples/: orchestrator.yml
scripts/: check-capability-contract.sh  check-tier-boundaries.sh  check-version-consistency.sh  install.sh  release-gate.sh  uninstall.sh  verify-release.sh  verify-standalone-install.sh
src/: Orchestrator.hs
src/Orchestrator/: Baseline.hs  Changelog.hs  Complexity.hs  Config.hs  Demo.hs  Diff.hs  Fix.hs  Formatter.hs  GitHub.hs  Hook.hs  Model.hs  Parser.hs  Policy.hs  Render.hs  Scan.hs  Secrets.hs  Simulate.hs  Types.hs  UI.hs  Validate.hs  Version.hs
src/Orchestrator/Permissions/: Minimum.hs
src/Orchestrator/Render/: Upgrade.hs
src/Orchestrator/Rules/: Composite.hs  Duplicate.hs  Environment.hs  Matrix.hs  Reuse.hs
src/Orchestrator/Simulate/: Conditions.hs  Matrix.hs  Types.hs
src/Orchestrator/UI/: Server.hs
test/: Main.hs
test/Test/: Config.hs  Demo.hs  Diff.hs  EdgeCases.hs  Golden.hs  Integration.hs  Model.hs  Parser.hs  Policy.hs  Properties.hs  Validate.hs
