cabal-version:   3.0
name:            orchestrator
version:         3.0.4
synopsis:        GitHub Actions workflow analysis, simulation, and governance tool
description:
  Haskell Orchestrator scans GitHub Actions workflows, parses them into a typed
  domain model, validates correctness and policy compliance, simulates execution,
  computes minimum permissions, analyzes action health, and generates
  deterministic remediation plans — with a built-in web dashboard.
  .
  Designed for DevOps engineers, platform teams, and security-minded operators
  who need to maintain consistent, secure CI/CD workflows across repositories.

license:         MIT
license-file:    LICENSE
author:          Jamal Al-Sarraf
maintainer:      19882582+jalsarraf0@users.noreply.github.com
category:        Development
build-type:      Simple
extra-doc-files: README.md CHANGELOG.md
tested-with:     GHC ==9.6.7

source-repository head
  type:     git
  location: https://github.com/jalsarraf0/Haskell-Orchestrator.git

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wmissing-export-lists
               -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import:           warnings
  default-language: GHC2021
  default-extensions: DerivingStrategies OverloadedStrings
  hs-source-dirs:   src
  exposed-modules:
    Orchestrator
    Orchestrator.Actions.Catalog
    Orchestrator.Actions.Pin
    Orchestrator.Baseline
    Orchestrator.Changelog
    Orchestrator.Complexity
    Orchestrator.Config
    Orchestrator.Demo
    Orchestrator.Diff
    Orchestrator.Fix
    Orchestrator.Formatter
    Orchestrator.GitHub
    Orchestrator.Graph
    Orchestrator.Hook
    Orchestrator.LSP
    Orchestrator.Model
    Orchestrator.Parser
    Orchestrator.Permissions.Minimum
    Orchestrator.Policy
    Orchestrator.Policy.Extended
    Orchestrator.Render
    Orchestrator.Render.Markdown
    Orchestrator.Render.Sarif
    Orchestrator.Render.Upgrade
    Orchestrator.Rules.Composite
    Orchestrator.Rules.Duplicate
    Orchestrator.Rules.Environment
    Orchestrator.Rules.Matrix
    Orchestrator.Rules.Reuse
    Orchestrator.Scan
    Orchestrator.Secrets
    Orchestrator.Simulate
    Orchestrator.Simulate.Conditions
    Orchestrator.Simulate.Matrix
    Orchestrator.Simulate.Types
    Orchestrator.Types
    Orchestrator.UI
    Orchestrator.UI.Server
    Orchestrator.Validate
    Orchestrator.Version
  build-depends:
    , aeson           >=2.1   && <2.3
    , base            >=4.18  && <4.20
    , bytestring      >=0.11  && <0.13
    , containers       >=0.6  && <0.8
    , directory        >=1.3  && <1.4
    , filepath         >=1.4  && <1.6
    , http-client      >=0.7  && <0.8
    , http-client-tls  >=0.3  && <0.4
    , http-types       >=0.12 && <0.13
    , mtl              >=2.3  && <2.4
    , process          >=1.6  && <1.8
    , text             >=2.0  && <2.2
    , time             >=1.12 && <1.15
    , wai              >=3.2  && <3.3
    , warp             >=3.3  && <3.5
    , yaml             >=0.11 && <0.12

executable orchestrator
  import:           warnings
  default-language: GHC2021
  default-extensions: DerivingStrategies OverloadedStrings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:
    CLI
  build-depends:
    , base            >=4.18  && <4.20
    , directory        >=1.3  && <1.4
    , orchestrator
    , optparse-applicative >=0.17 && <0.19
    , text             >=2.0  && <2.2

test-suite orchestrator-test
  import:           warnings
  default-language: GHC2021
  default-extensions: DerivingStrategies OverloadedStrings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Test.Model
    Test.Parser
    Test.Policy
    Test.Validate
    Test.Diff
    Test.Demo
    Test.Config
    Test.Golden
    Test.EdgeCases
    Test.Properties
    Test.Integration
  build-depends:
    , base            >=4.18  && <4.20
    , bytestring      >=0.11  && <0.13
    , containers       >=0.6  && <0.8
    , filepath         >=1.4  && <1.6
    , orchestrator
    , QuickCheck       >=2.14  && <2.16
    , tasty            >=1.4   && <1.6
    , tasty-hunit      >=0.10  && <0.11
    , tasty-quickcheck >=0.10  && <0.12
    , text             >=2.0  && <2.2
    , yaml             >=0.11 && <0.12
